# trading-service

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  alembic.ini  config.yaml  demo_martingale.py  main.py  pyproject.toml  pyrightconfig.json  temp_kline.py
architecture_document/: 01-system-architecture.md  02-data-flow.md  03-domain-model.md  04-strategy-engine.md  05-api-design.md  06-integration.md  DEVELOPMENT_CHECKLIST.md  README.md
demo/: demo_backtest.py  demo_picker.py  demo_post_generation.py  demo_take_profit.py  demo_technical_picker.py
deploy/: deploy.sh
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: env.py
tests/: __init__.py  conftest.py  test_action_record.py  test_alpha_source.py  test_backtest.py  test_binance_client.py  test_breakout_detector.py  test_bullish_kline_filter.py  test_consecutive_candle_detector.py  test_content_scan_strategy.py  test_delisting.py  test_exchange_open_position.py  test_kline_utils.py  test_list_actions.py  test_market_cap_snapshot.py  test_martingale_short_strategy.py  test_martingale_strategy.py  test_micro_cap_strategy.py  test_pipeline.py  test_post_generator.py  test_post_generator_publish.py  test_post_styles.py  test_price_change_detector.py  test_publisher.py  test_publisher_async.py  test_publisher_watchdog.py  test_publisher_worker_thread.py  test_scheduler.py  test_short_signal_filter.py  test_signal.py  test_signal_detector.py  test_strategies_content_scan_api.py  test_symbol.py  test_technical_analyzer.py  test_technical_filter.py  test_volume_surge_detector.py
trading_service/: __init__.py  app.py  config.py  exchange.py  migration_check.py  models.py  scheduler.py  store.py  types.py
(+103 files in other folders)
