[project]
name = "trading-service"
version = "0.1.0"
description = "Trading Service - 独立交易服务，包含策略引擎、仓位管理、订单执行"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings[yaml]>=2.6.0",
    "httpx>=0.27.0",
    "ccxt>=4.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUnnecessaryComparison = "warning"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trading_service"]
