[project]
name = "trading-service"
version = "0.1.0"
description = "Trading Service - 独立交易服务，包含策略引擎、仓位管理、订单执行"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings[yaml]>=2.6.0",
    "httpx>=0.27.0",
    "ccxt>=4.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "requests>=2.34.2",
    "pydantic>=2.13.4",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
ignore = ["**/type_wrapper/*_wrapper.py"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools]
packages = ["trading_service"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: 标记需要外部服务的集成测试（网络、API、数据库等）",
]
